app-front/app/gitlogger-4bitcss-iceberg-dark.css
:root {
  --selectionBackground: #c6c8d1;
  --cursorColor: #c6c8d1;
  --foreground: #c6c8d1;
  --background: #161821;
  --brightWhite: #d2d4de;
  --brightCyan: #95c4ce;
  --brightPurple: #ada0d3;
  --brightBlue: #91acd1;
  --brightYellow: #e9b189;
  --brightGreen: #c0ca8e;
  --brightRed: #e98989;
  --brightBlack: #6b7089;
  --white: #c6c8d1;
  --cyan: #89b8c2;
  --purple: #a093c7;
  --blue: #84a0c6;
  --yellow: #e2a478;
  --green: #b4be82;
  --red: #e27878;
  --black: #1e2132;
  --name: "iceberg-dark";
  --Luma: 0.094998431372549;
  --Contrast: 0.690196078431372;
  --IsBright: 0;
  --IsDark: 1;
}

.colorSchemeName::before,
.ColorSchemeName::before {
  content: "iceberg-dark";
}

.colorSchemeFileName::before,
.ColorSchemeFileName::before {
  content: "iceberg-dark.css";
}

.foreground,
.Foreground {
  color: var(--foreground);
}

.background,
.Background {
  background-color: var(--background);
}

.foreground-border,
.Foreground-Border {
  border-color: var(--foreground);
}

.foreground-fill,
.Foreground-Fill {
  fill: var(--foreground);
}

.foreground-stroke,
.Foreground-Stroke {
  stroke: var(--foreground);
}

.background-border,
.Background-Border {
  border-color: var(--background);
}

.background-fill,
.Background-Fill {
  fill: var(--background);
}

.background-stroke,
.Background-Stroke {
  stroke: var(--background);
}

.output,
.Output {
  color: var(--foreground);
}

.success,
.Success {
  color: var(--brightGreen);
}

.failure,
.Failure {
  color: var(--red);
}

.error,
.Error {
  color: var(--brightRed);
}

.warning,
.Warning {
  color: var(--brightYellow);
}

.debug,
.Debug {
  color: var(--yellow);
}

.verbose,
.Verbose {
  color: var(--brightCyan);
}

.progress,
.Progress {
  color: var(--cyan);
}

.link,
.Link {
  color: var(--cyan);
}

.error-border,
.Error-Border {
  border-color: var(--brightRed);
}

.error-fill,
.Error-Fill {
  fill: var(--brightRed);
}

.error-stroke,
.Error-Stroke {
  stroke: var(--brightRed);
}

.success-border,
.Success-Border {
  border-color: var(--brightGreen);
}

.success-fill,
.Sucesss-Fill {
  fill: var(--brightGreen);
}

.sucesss-stroke,
.Success-Stroke {
  stroke: var(--brightGreen);
}

.warning-border,
.Warning-Border {
  border-color: var(--brightYellow);
}

.warning-fill,
.Warning-Fill {
  fill: var(--brightYellow);
}

.warning-stroke,
.Warning-Stroke {
  stroke: var(--brightYellow);
}

/* colors */
.black,
.Black,
.ANSI0 {
  color: var(--black);
}

.red,
.Red,
.ANSI1 {
  color: var(--red);
}

.green,
.Green,
.ANSI2 {
  color: var(--green);
}

.yellow,
.Yellow,
.ANSI3 {
  color: var(--yellow);
}

.blue,
.Blue,
.ANSI4 {
  color: var(--blue);
}

.magenta,
.Magenta,
.ANSI5 {
  color: var(--purple);
}

.cyan,
.Cyan,
.ANSI6 {
  color: var(--cyan);
}

.white,
.White,
.ANSI7 {
  color: var(--white);
}

.brightblack,
.bright-black,
.BrightBlack,
.ANSI8 {
  color: var(--brightBlack);
}

.brightred,
.bright-red,
.BrightRed,
.ANSI9 {
  color: var(--brightRed);
}

.brightgreen,
.bright-green,
.BrightGreen,
.ANSI10 {
  color: var(--brightGreen);
}

.brightyellow,
.bright-yellow,
.BrightYellow,
.ANSI11 {
  color: var(--brightYellow);
}

.brightblue,
.bright-blue,
.BrightBlue,
.ANSI12 {
  color: var(--brightBlue);
}

.brightmagenta,
.bright-magenta,
.BrightMagenta,
.ANSI13 {
  color: var(--brightPurple);
}

.brightcyan,
.bright-cyan,
.BrightCyan,
.ANSI14 {
  color: var(--brightCyan);
}

.brightwhite,
.bright-white,
.BrightWhite,
.ANSI15 {
  color: var(--brightWhite);
}

.purple,
.Purple {
  color: var(--purple);
}

.brightpurple,
.bright-purple,
.BrightPurple {
  color: var(--brightPurple);
}

/* background colors */
.black-background,
.BlackBackground,
.ANSI0-Background,
.ansi0-background {
  background-color: var(--black);
}

.red-background,
.RedBackground,
.ANSI1-Background,
.ansi1-background {
  background-color: var(--red);
}

.green-background,
.GreenBackground,
.ANSI2-Background,
.ansi2-background {
  background-color: var(--green);
}

.yellow-background,
.YellowBackground,
.ANSI3-Background,
.ansi3-background {
  background-color: var(--yellow);
}

.blue-background,
.BlueBackground,
.ANSI4-Background,
.ansi4-background {
  background-color: var(--blue);
}

.magenta-background,
.MagentaBackground,
.ANSI5-Background,
.ansi5-background {
  background-color: var(--purple);
}

.cyan-background,
.CyanBackground,
.ANSI6-Background,
.ansi6-background {
  background-color: var(--cyan);
}

.white-background,
.WhiteBackground,
.ANSI7-Background,
.ansi7-background {
  background-color: var(--white);
}

.brightblack-background,
.bright-black-background,
.BrightBlackBackground,
.ANSI8-Background,
.ansi8-background {
  background-color: var(--brightBlack);
}

.brightred-background,
.bright-red-background,
.BrightRedBackground,
.ANSI9-Background,
.ansi9-background {
  background-color: var(--brightRed);
}

.brightgreen-background,
.bright-green-background,
.BrightGreenBackground,
.ANSI10-Background,
.ansi10-background {
  background-color: var(--brightGreen);
}

.brightyellow-background,
.bright-yellow-background,
.BrightYellowBackground,
.ANSI11-Background,
.ansi11-background {
  background-color: var(--brightYellow);
}

.brightblue-background,
.bright-blue-background,
.BrightBlueBackground,
.ANSI12-Background,
.ansi12-background {
  background-color: var(--brightBlue);
}

.brightmagenta-background,
.bright-magenta-background,
.BrightMagentaBackground,
.ANSI13-Background,
.ansi13-background {
  background-color: var(--brightPurple);
}

.brightcyan-background,
.bright-cyan-background,
.BrightCyanBackground,
.ANSI14-Background,
.ansi14-background {
  background-color: var(--brightCyan);
}

.brightwhite-background,
.bright-white-background,
.BrightWhiteBackground,
.ANSI15-Background,
.ansi15-background {
  background-color: var(--brightWhite);
}

/* fills */
.black-fill,
.BlackFill,
.ANSI0-Fill,
.ansi0-fill {
  fill: var(--black);
}

.red-fill,
.RedFill,
.ANSI1-Fill,
.ansi1-fill {
  fill: var(--red);
}
/* ... */

